--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pandas==2.0.0
 pandas-stubs==1.5.3.230321
 Pillow==9.5.0
 plotly==5.14.0
+pyarrow==11.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
